opam-version: "1.2"
maintainer: "yunfeng.lin04@gmail.com"
authors: "Yunfeng Lin"
license: "MIT"
homepage: "https://github.com/dinosaur-lin/businessdays"
dev-repo: "https://github.com/dinosaur-lin/businessdays.git"
bug-reports: "https://github.com/dinosaur-lin/businessdays/issues"
doc: "http://github.com/dinosaur-lin/businessdays/"

name: "businessdays"
version: "dev"

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-j" jobs]
]

build-test: [["dune" "runtest" "-j" jobs]]

depends: [    
  "dune" {build & >= "1.0"}
  "core_kernel" {>= "v0.11.1"}
  "alcotest"
]

available: [ ocaml-version >= "4.07" ]
